Arduino/tmp/err.log
D:\developpements\ardibot\Arduino\tmp\app.ino: In function 'void loop()':
D:\developpements\ardibot\Arduino\tmp\app.ino:15:5: error: 'tempo' was not declared in this scope
     tempo = get_SONAR(SONAR_1_PIN) / 50;
     ^~~~~
D:\developpements\ardibot\Arduino\tmp\app.ino:15:5: note: suggested alternative: 'tempos'
     tempo = get_SONAR(SONAR_1_PIN) / 50;
     ^~~~~
     tempos
exit status 1
